k8s/detailservice-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.7.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: detailservice
  name: detailservice
spec:
  replicas: 1
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: detailservice
    spec:
      containers:
      - image: cwalops/detailservice:init
        name: detailservice
        ports:
        - containerPort: 5002
        resources: {}
      restartPolicy: Always
status: {}
