k8s/ratioservice-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -o k8s/
    kompose.version: 1.20.0 (f3d54d784)
  creationTimestamp: null
  labels:
    io.kompose.service: ratioservice
    app: ratioservice
  name: ratioservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ratioservice
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -o k8s/
        kompose.version: 1.20.0 (f3d54d784)
      creationTimestamp: null
      labels:
        io.kompose.network/internal: "true"
        io.kompose.service: ratioservice
        app: ratioservice
    spec:
      containers:
      - image: cwalops/ratioservice:latest
        name: ratioservice
        ports:
        - containerPort: 5001
        resources: {}
      restartPolicy: Always
status: {}
