k8s/detailservice-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -o k8s/
    kompose.version: 1.20.0 (f3d54d784)
  creationTimestamp: null
  labels:
    io.kompose.service: detailservice
  name: detailservice
spec:
  ports:
  - name: "5002"
    port: 5002
    targetPort: 5002
  selector:
    io.kompose.service: detailservice
status:
  loadBalancer: {}
