k8s/internal-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: internal
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          io.kompose.network/internal: "true"
  podSelector:
    matchLabels:
      io.kompose.network/internal: "true"
